--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-pdf": "^5.2.0",
     "react-router-dom": "^5.2.0",
