--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.4.0",
     "react-pdf": "^5.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -44,12 +45,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router": "^5.1.13",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-pdf": "^5.0.2",
+    "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7"
   }
 }
